--- a/april/templates/april/sometexfile.tex
+++ b/april/templates/april/sometexfile.tex
@@ -36,11 +36,13 @@
   citecolor = mBlue,
   linkcolor = mBlue,
 }
-
-
+\usepackage{cmap}
+\usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \usepackage{float}
-
+\usepackage{fontspec}
+\setmainfont[Mapping=tex-text]{Times New Roman}
+\usepackage[russian]{babel}
 
 
 \usepackage[compact]{titlesec}
